msg position fix (on mobile)

--- a/triforce.css
+++ b/triforce.css
@@ -16,7 +16,7 @@ h2{
     font-weight: bold;
     opacity: 0;
     position: absolute;
-    top: 50px;
+    top: 15vh;
     left: 50%;
     transform: translate(-50%, 0);
 }
